# autops-agentic-framework

./: .coverage  .gitignore  CLAUDE.md  README.md  START_HERE.md  app.py  pyproject.toml  templates.txt
.claude/: settings.local.json
.cursor/plans/: managed_satellites_feature_c2c17153.plan.md  orbital_toolkit_integration_ebeb2602.plan.md
agent/: coala_reasoning_engine.py
archive/: README.md
archive/scripts/: check_ollama.py  setup_server.sh  train_subsymbolic.py
configs/experiments/: README.md  basemultisat_imas_sda_subm_le_ah.yaml  eventsat_baseline.yaml  eventsat_cen_ooda_agnt_hd_ag.yaml  eventsat_cen_ooda_agnt_hd_ah.yaml  eventsat_cen_ooda_agnt_hd_cg.yaml  eventsat_cen_ooda_hybr_hd_ag.yaml  eventsat_cen_ooda_hybr_hd_ah.yaml  eventsat_cen_ooda_hybr_hd_cg.yaml  eventsat_cen_ooda_subm_le_ag.yaml  eventsat_cen_ooda_subm_le_ah.yaml  eventsat_cen_ooda_subm_le_cg.yaml  eventsat_cen_ooda_symb_hd_ag.yaml  eventsat_cen_ooda_symb_hd_ah.yaml  eventsat_cen_ooda_symb_hd_cg.yaml  eventsat_cen_react_agnt_hd_ag.yaml  eventsat_cen_react_agnt_hd_ah.yaml  eventsat_cen_react_agnt_hd_cg.yaml  eventsat_cen_react_hybr_hd_ag.yaml  eventsat_cen_react_hybr_hd_ah.yaml  eventsat_cen_react_hybr_hd_cg.yaml  eventsat_cen_react_subm_le_ag.yaml  eventsat_cen_react_subm_le_ah.yaml  eventsat_cen_react_subm_le_cg.yaml  eventsat_cen_react_symb_hd_ag.yaml  eventsat_cen_react_symb_hd_ah.yaml  eventsat_cen_react_symb_hd_cg.yaml  eventsat_cen_sda_agnt_hd_ag.yaml  eventsat_cen_sda_agnt_hd_ah.yaml  eventsat_cen_sda_agnt_hd_cg.yaml  eventsat_cen_sda_hybr_hd_ag.yaml  eventsat_cen_sda_hybr_hd_ah.yaml  eventsat_cen_sda_hybr_hd_cg.yaml  eventsat_cen_sda_subm_le_ag.yaml  eventsat_cen_sda_subm_le_ah.yaml  eventsat_cen_sda_subm_le_cg.yaml  eventsat_cen_sda_symb_hd_ag.yaml  eventsat_cen_sda_symb_hd_ah.yaml  eventsat_cen_sda_symb_hd_cg.yaml  eventsat_cmas_ooda_agnt_hd_ah.yaml  (+223 more)
configs/scenarios/: README.md  basemultisat.yaml  eventsat.yaml  flamingo.yaml  multieventsat.yaml  ssa.yaml
data/: README.md  managed_satellites.toon
data/memory/: episodic_memory.toon
data/results/: README.md  config.json  results.json
data/trained_models/: README.md
docs/: FOUNDATION_SPEC.md  architecture.md  decision_matrix.md  eventsat_llm_closeout.md  flamingo_mvp.md  implementation_guide.md  implementations.md  metrics.md  morphological_matrix.md  research-tracker.md  scenarios.md
notebooks/: telemetry.ipynb
scripts/: README.md  build_flamingo_board.py  build_index.py  build_results_board.py  build_results_inspector.py  build_wm_board.py  check_ollama.py  enumerate_tradespace.py  export_eventsat_world_model_traces.py  export_ssa_world_model_traces.py  extract_telemetry.py  generate_experiment_configs.py  generate_ssa_configs.py  generate_ssp_variants.py  phase12_hourly_digest.py  recompute_metrics.py  refresh_board.py  run_autops_rl.sbatch  run_batch.py  run_flamingo_scale.py  setup_container_rl.sbatch  setup_container_rl.sh  setup_server.sh  smoke_llm.py  test_h100_container_rl.sbatch  train_subsymbolic.py
src/: __init__.py  __main__.py  cli.py
src/agent_organization/: __init__.py  base.py  centralized.py  centralized_mas.py  decentralized_mas.py  distributed.py  hierarchical.py  hybrid_mas.py  independent_mas.py  single_agent_system.py
src/behaviour/: __init__.py  controller.py  prompt_optimizer.py  training_pipeline.py
src/core/: config_loader.py  (+3 more)
templates/: index.html
tests/: test_adcs.py  test_agent_organization.py  test_agentic_representation.py  test_agentic_scheduler.py  test_animation.py  test_basemultisat.py  test_cli.py  test_config_generation.py  test_conventional_ground.py  test_decision_loops.py  test_environment.py  test_eventsat_physics.py  test_flamingo_env.py  test_flamingo_runner.py  test_highfidelity_tools.py  test_llm_representation.py  test_llm_scheduler.py  test_multieventsat.py  test_ooda_loop.py  test_operations_paradigm.py  test_orbital.py  test_orchestration.py  test_placeholder_schedulers.py  test_prompt_optimizer.py  test_react_loop.py  test_representations.py  test_reproducibility.py  test_results_serialisation.py  test_rewards.py  test_rllib_backend.py  test_schedule_based_eventsat.py  test_ssa.py  test_subsymbolic_representation.py  test_tradespace_enumeration.py  test_world_model_eventsat.py  test_writable_memory.py
tools/: orekit_propagation_tool.py  satellite_data_tool.py  tool_loader.py
(+159 files in other folders)
