[project]
name = "autops-demo"
version = "0.2.0"
description = "Cognitive Architecture Experiments for Satellite Constellation Autonomy"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy",
    "pyyaml",           # Configuration
    "pydantic>=2.12.5",    # Data validation
    "pandas",           # Results analysis
    "matplotlib",       # Visualization
    "seaborn",          # Statistical plots
    "scipy",            # Statistical tests
]

[project.optional-dependencies]
dev = [
    "black",
    "isort",
    "ruff",
    "mypy",
    "ipython",
    "jupyter",
    "pytest",
    "pytest-cov",
]

orbital = [
    "orekit-jpype",    # High-fidelity orbital mechanics
]

llm = [
    "openai>=2.30.0",     # OpenAI API client (fallback provider)
    "requests",        # HTTP client for Ollama API
]

rl = [
    "torch",           # For subsymbolic representations (optional)
    "gymnasium",       # Standard RL interface (optional)
    "ray[rllib]==2.44.0",  # Canonical PPO backend
]

viz = [
    "cartopy",         # World map projections for ground track animation
    "pillow",          # GIF output for animate_ground_track
]

[project.scripts]
autops = "src.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
addopts = "--cov=src --cov-report=html --cov-report=term"

[tool.black]
line-length = 100

[tool.isort]
profile = "black"
line_length = 100

[tool.ruff]
line-length = 100

