[project]
name = "autops-demo"
version = "0.2.0"
description = "Cognitive Architecture Experiments for Satellite Constellation Autonomy"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy",
    "pyyaml",           # Configuration
    "pydantic>=2.12.5",    # Data validation
]

[project.optional-dependencies]
dev = [
    "black",
    "isort",
    "ruff",
    "mypy",
    "ipython",
    "jupyter",
    "pytest",
    "pytest-cov",
]

orbital = [
    "orekit-jpype",    # High-fidelity orbital mechanics
]

llm = [
    "openai>=2.30.0",     # OpenAI API client (fallback provider)
    "requests",        # HTTP client for Ollama API
]

rl = [
    "torch",           # For subsymbolic representations (optional)
    "gymnasium",       # Standard RL interface (optional)
    "ray[rllib]==2.44.0",  # Canonical PPO backend
]

[project.scripts]
autops = "src.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
# Keep normal test runs artifact-free; request coverage explicitly when needed.

[tool.black]
line-length = 100

[tool.isort]
profile = "black"
line_length = 100

[tool.ruff]
line-length = 100

